spacing of the root element fixed

--- a/reactdisasterrelief.client/src/App.css
+++ b/reactdisasterrelief.client/src/App.css
@@ -1,8 +1,17 @@
-﻿#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+﻿html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    /*background-color: aquamarine;*/
+}
+
+#root {
+    /*max-width: 1280px;*/
+    height: 100%;
+  /*  margin: 0 auto;*/
+    /*padding: 2rem;*/
+    /*text-align: center;*/
+   /* background-color: bisque;*/
 }
 
 th, td {
